[tool.poetry]
name = "mpl_widget_box"
version = "0.1.0"
description = ""
authors = ["Jae-Joon Lee <lee.j.joon@gmail.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.5.1"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
ipython = "^8.2.0"
poetry2setup = "^1.0.0"
pytest = "^7.1.2"
nox = "^2022.1.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

