[tool.poetry]
name = "mpl_widget_box"
version = "0.1.0"
description = ""
authors = ["Jae-Joon Lee <lee.j.joon@gmail.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.2"
rapidyaml = "^0.4.1"
astropy = "^5.1"
fontawesomefree = "^6.1.1"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
