[tool.poetry]
name = "mpl_widget_box"
version = "0.1.0"
description = ""
authors = ["Jae-Joon Lee <lee.j.joon@gmail.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = ">3.7"
matplotlib = "^3"
rapidyaml = "^0.4"
astropy = ">5.0"
fontawesomefree = ">6.1"

[tool.poetry.dev-dependencies]
ipython = "^8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
